[package]
name = "retty"
version = "0.0.0"
edition = "2021"
authors = ["Rain Liu <y@liu.mx>"]
description = "Retty — an asynchronous Rust networking application framework inspired by Netty"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/retty"
repository = "https://github.com/ngr-tc/retty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
